# torch_algorithm

./: README.md  pyproject.toml  requirements.txt  setup.py
cyy_torch_algorithm/: __init__.py  batch_computation_hook.py  computation_hook.py  evaluation.py  grad_cos.py  grad_dot.py  gradient.py  hessian_vector_product.py  influence_function.py  inverse_hessian_vector_product.py  normalization.py  prune.py  retraining.py  sample_computation_hook.py
cyy_torch_algorithm/batch_hvp/: batch_hvp_hook.py
cyy_torch_algorithm/computation/: __init__.py  batch_computation_hook.py  computation_hook.py  evaluation.py  sample_computation_hook.py
cyy_torch_algorithm/data_structure/: synced_tensor_dict.py
cyy_torch_algorithm/hydra/: hydra_adam_hook.py  hydra_analyzer.py  hydra_config.py  hydra_hook.py  hydra_sgd_hook.py
cyy_torch_algorithm/influence_function_family/: grad_cos.py  grad_dot.py  influence_function.py  inverse_hessian_vector_product.py  relatif.py  tracein.py  tracin.py  util.py
cyy_torch_algorithm/lean_hydra/: lean_hydra_adam_hook.py  lean_hydra_config.py  lean_hydra_hook.py  lean_hydra_sgd_hook.py
cyy_torch_algorithm/quantization/: deterministic.py  qat.py  scheme.py  stochastic.py
cyy_torch_algorithm/sample_gjvp/: sample_gjvp_hook.py
cyy_torch_algorithm/sample_gradient/: sample_gradient.py  sample_gradient_hook.py  sample_gradient_util.py
cyy_torch_algorithm/sample_gradient_product/: sample_gradient_product_hook.py
cyy_torch_algorithm/sample_gvjp/: sample_gvjp_hook.py
cyy_torch_algorithm/sample_hvp/: sample_hvp_hook.py
test/: __init__.py
(+47 files in other folders)
