[build-system]
requires = ["setuptools >= 63.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cyy_torch_algorithm"
version = "0.2"
requires-python = ">=3.13"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
  {name = "cyy", email = "cyyever@outlook.com"},
]
license = {text = "BSD License"}
classifiers = [
  "Programming Language :: Python"
]

dependencies=[
"cyy_torch_toolbox@git+https://github.com/cyyever/torch_toolbox.git@main",
]



[project.urls]
Repository = "https://github.com/cyyever/torch_algorithm"

[tool.pyright]
include = ["cyy_torch_algorithm"]

[tool.setuptools.package-data]
cyy_torch_algorithm = ["py.typed"]

[tool.ruff]
target-version = "py313"
src = ["cyy_torch_algorithm"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["F401","E501","F403"]
